--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@mui/x-date-pickers": "^7.3.2",
+    "@tanstack/react-query": "^5.49.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
     "react": "^18.2.0",
