--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tanstack/react-query": "^5.49.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
